0.0.1:

* Initial release.

0.0.2:

* Fixed pathlib compatibility on some versions of Python

* Switched compression method to ZIP_DEFLATED for better compatibility