@@ -26,6 +26,10 @@ jobs:
           script: ./scripts/run_smoketests.sh
           python:
             - "3.7"
+        - stage: smoketest
+          script: "pip  install pyinstaller && pyinstaller --onefile ./pyinstaller/pretor-psf.py && sh -c 'PATH=$(PWD)/dist/:$PATH ./scripts/run_smoketests.sh'"
+          python:
+            - "3.7"
         - stage: lint
           python:
               - "3.7"
