@@ -1,0 +1,4 @@
+from pretor import psf
+
+if __name__ == "__main__":
+    psf.psf_cli()
